--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,9 @@ __marimo__/
 runs/
 *.pt
 *.pth
+
+# Ignore everything inside the experiments directories
+/experiments/*
+
+# But do not ignore the .gitignore (or any hidden file) inside it
+!/experiments/__init__.py
