--- a/experiment_training/imitation_learning/cfg_vqvae_flow_matching/exp1/cfg_vqvae_flow_matching.yaml
+++ b/experiment_training/imitation_learning/cfg_vqvae_flow_matching/exp1/cfg_vqvae_flow_matching.yaml
@@ -12,6 +12,44 @@ model:
     vqvae_codebook: "experiment_models/cfg_vqvae_flow_matching/exp1/vqvae_codebook.yaml"
     info_encoder: "experiment_models/cfg_vqvae_flow_matching/exp1/info_encoder.yaml"
     action_decoder: "experiment_models/cfg_vqvae_flow_matching/exp1/action_decoder.yaml"
+  component_optims:
+    backbone:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+    vqvae_posterior:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+    vqvae_prior:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+    vqvae_codebook:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+    info_encoder:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+    action_decoder:
+      type: "schedule_free_radam"
+      params:
+        lr: 1e-4
+        betas: [0.9, 0.999]
+        silent_sgd_phase: true
+
 
 data:
   datamodule:
@@ -36,12 +74,6 @@ train:
   save_dir: "~/offline_trainer/experiment_training/imitation_learning/cfg_vqvae_flow_matching/exp1"
   trainer: 
     type: 'cfg_vqvae_flow_matching_trainer'
-  optimizer:
-    type: "schedule_free_radam"
-    params:
-      lr: 1e-4
-      betas: [0.9, 0.999]
-      silent_sgd_phase: true
   loss:
     type: "l2_loss"
     params:
