--- a/experiment_models/cfg_vqvae_flow_matching/exp1/backbone.yaml
+++ b/experiment_models/cfg_vqvae_flow_matching/exp1/backbone.yaml
@@ -12,6 +12,7 @@ model:
       radiov3:
         _type_: radiov3
         channels: ${params.channels}
+        resize_method: ${params.resize_method}
 
     nodes:
       - name: radiov3_out
