--- a/experiment_models/cfg_vqvae_flow_matching/exp1/da3.yaml
+++ b/experiment_models/cfg_vqvae_flow_matching/exp1/da3.yaml
@@ -9,6 +9,7 @@ model:
     modules:
       da3:
         _type_: da3
+        resize_method: ${params.resize_method}
 
     nodes:
       - name: da3
