--- a/experiment_training/imitation_learning/variational_flow_matching_policy/exp1/variational_flow_matching_policy.yaml
+++ b/experiment_training/imitation_learning/variational_flow_matching_policy/exp1/variational_flow_matching_policy.yaml
@@ -84,9 +84,9 @@ data:
     type: "lerobot_dataset_factory"
     params:
       task_name: 'picknplace'
-      local_files_only: true
-      root: '~/../mnt/igris-b-pnp/lerobot_dataset_v3'
-      repo_id: 'joon001001/igris-b-pnp-lerobot_v3'
+      local_files_only: false
+      root: '.'
+      repo_id: 'joon001001/igris-b-pnp_v3'
       action_horizon: 40
       obs_proprio_history: 40
       obs_images_history: 1
