--- a/experiment_training/imitation_learning/mutual_information_estimator/exp1/mutual_information_estimator.yaml
+++ b/experiment_training/imitation_learning/mutual_information_estimator/exp1/mutual_information_estimator.yaml
@@ -1,6 +1,6 @@
 plugins:
   - "experiment_training.components.dataloader.lerobot_data"
-  - "experiment_training.components.optimizer.schedule_free_radam"
+  - "experiment_training.components.optimizer.adamw_cosine_decay"
   - "experiment_training.components.trainer.imitation_learning.mutual_information_estimator.mutual_information_estimator_trainer"
 model:
   find_unused_parameters: true
@@ -24,29 +24,77 @@ model:
       freeze: false
   component_optims:
     action_decoder:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 5.0e-4 # OneCycleLR
+        total_steps: 7660
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 1000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
     action_encoder:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 5.0e-4 # OneCycleLR
+        total_steps: 7660
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 1000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
     state_encoder:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 5.0e-4 # OneCycleLR
+        total_steps: 7660
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 1000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
     state_decoder:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 5.0e-4 # OneCycleLR
+        total_steps: 7660
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 1000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
 
 data:
   datamodule:
@@ -60,14 +108,14 @@ data:
       obs_proprio_history: 40
       obs_images_history: 1
       HZ: 20
-  batch_size: 1
+  batch_size: 512
   num_workers: 12
   pin_memory: true
   persistent_workers: true
   prefetch_factor: 1
 train:
   project_name: 'mutual_information_estimator exp1'
-  epoch: 1000
+  epoch: 20
   load_dir: null
   save_every: 5
   save_dir: "experiment_training/imitation_learning/mutual_information_estimator/exp1"
