--- a/experiment_training/imitation_learning/naive_flow_matching_policy/exp1/naive_flow_matching_policy.yaml
+++ b/experiment_training/imitation_learning/naive_flow_matching_policy/exp1/naive_flow_matching_policy.yaml
@@ -1,6 +1,6 @@
 plugins:
   - "experiment_training.components.dataloader.lerobot_data"
-  - "experiment_training.components.optimizer.schedule_free_radam"
+  - "experiment_training.components.optimizer.adamw_cosine_decay"
   - "experiment_training.components.trainer.imitation_learning.naive_flow_matching_policy.naive_flow_matching_policy_trainer"
 model:
   find_unused_parameters: true
@@ -24,17 +24,41 @@ model:
       freeze: false
   component_optims:
     proprio_projector:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 1.0e-3 # OneCycleLR
+        total_steps: 1000000
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 10000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
     action_decoder:
-      type: "schedule_free_radam"
+      type: "adamw_warmup_cosine_decay"
       params:
-        lr: 1e-4
+        lr: 1.0e-4 # AdamW
         betas: [0.9, 0.999]
-        silent_sgd_phase: true
+        eps: 1.0e-9
+        weight_decay: 0.01
+        max_lr: 1.0e-3 # OneCycleLR
+        total_steps: 1000000
+        epochs: null
+        steps_per_epoch: null
+        pct_start: 0.01
+        warmup_strategy: 'linear'
+        div_factor: 25.0
+        final_div_factor: 10000.0
+        alpha: null
+        exponent: 1.0
+        last_epoch: -1
 
 data:
   datamodule:
@@ -43,7 +67,7 @@ data:
       task_name: 'picknplace'
       local_files_only: false
       root: '.'
-      repo_id: 'joon001001/igris-b-pnp_v3.1'
+      repo_id: 'joon001001/igris-b-pnp_v3.3.2'
       action_horizon: 40
       obs_proprio_history: 40
       obs_images_history: 1
@@ -54,11 +78,11 @@ data:
   persistent_workers: true
   prefetch_factor: 1
 train:
-  project_name: 'naive_flow_matching_policy exp3'
+  project_name: 'naive_flow_matching_policy exp1'
   epoch: 1000
   load_dir: null
   save_every: 3
-  save_dir: "~/offline_trainer/experiment_training/imitation_learning/naive_flow_matching_policy/exp1"
+  save_dir: "experiment_training/imitation_learning/naive_flow_matching_policy/exp1"
   trainer: 
     type: 'naive_flow_matching_policy_trainer'
   
