--- a/experiment_models/vfp_single_expert/exp1/info_embedder.yaml
+++ b/experiment_models/vfp_single_expert/exp1/info_embedder.yaml
@@ -5,19 +5,21 @@ params:
   cond_visual_dim: 1024
   use_cond_semantic: true
   use_cond_semantic_projection: true
-  cond_semantic_dim: 768
+  cond_semantic_dim: 3072
   use_cls_token: false
   num_cls_token: 1
   use_action: false
   action_dim: null
+  num_cond_semantic: 3
+  num_cond_visuals: 4
 
-  transformer_d_model: 768
-  transformer_nhead: 16
-  transformer_dim_feedforward: 4096
-  transformer_dropout: 0.2
+  transformer_d_model: 512
+  transformer_nhead: 8
+  transformer_dim_feedforward: 3200
+  transformer_dropout: 0.1
   transformer_activation: gelu
   transformer_batch_first: true
-  transformer_num_layers: 8
+  transformer_num_layers: 4
 
 model:
   graph:
@@ -41,6 +43,8 @@ model:
         cond_semantic_dim: ${params.cond_semantic_dim}
         use_cls_token: ${params.use_cls_token}
         num_cls_token: ${params.num_cls_token}
+        num_cond_semantic: ${params.num_cond_semantic}
+        num_cond_visuals: ${params.num_cond_visuals}
     nodes:
       - name: info_embedder
         call: module:info_embedder
