--- a/experiment_models/vfp_single_expert/exp2/multimodal_bridge.yaml
+++ b/experiment_models/vfp_single_expert/exp2/multimodal_bridge.yaml
@@ -11,31 +11,19 @@ params:
   use_action: false
   action_dim: null
   num_cond_semantic: 3
-  num_cond_visuals: 3
+  num_cond_visuals: 4
 
   transformer_d_model: 512
-  transformer_nhead: 8
-  transformer_dim_feedforward: 3200
-  transformer_dropout: 0.1
-  transformer_activation: gelu
-  transformer_batch_first: true
-  transformer_num_layers: 4
 
 model:
   graph:
     inputs: [cond_proprio, cond_visual, cond_semantic, action]
     modules:
-      info_embedder:
-        _type_: vfp_single_info_embedder
+      multimodal_bridge:
+        _type_: vfp_single_multimodal_bridge
         cond_proprio_dim: ${params.cond_proprio_dim}
         cond_visual_dim: ${params.cond_visual_dim}
         transformer_d_model: ${params.transformer_d_model}
-        transformer_nhead: ${params.transformer_nhead}
-        transformer_dim_feedforward: ${params.transformer_dim_feedforward}
-        transformer_dropout: ${params.transformer_dropout}
-        transformer_activation: ${params.transformer_activation}
-        transformer_batch_first: ${params.transformer_batch_first}
-        transformer_num_layers: ${params.transformer_num_layers}
         action_dim: ${params.action_dim}
         use_action: ${params.use_action}
         use_cond_semantic: ${params.use_cond_semantic}
@@ -46,12 +34,12 @@ model:
         num_cond_semantic: ${params.num_cond_semantic}
         num_cond_visuals: ${params.num_cond_visuals}
     nodes:
-      - name: info_embedder
-        call: module:info_embedder
+      - name: multimodal_bridge
+        call: module:multimodal_bridge
         kwargs:
           cond_proprio: $cond_proprio
           cond_visual: $cond_visual
           cond_semantic: $cond_semantic
           action: $action
-    outputs: [$info_embedder]
+    outputs: [$multimodal_bridge]
     return: single
