--- a/experiment_models/vfp_single_expert/exp2/vae_posterior.yaml
+++ b/experiment_models/vfp_single_expert/exp2/vae_posterior.yaml
@@ -3,30 +3,28 @@ schema_version: 1
 params:
   cond_proprio_dim: 48
   cond_visual_dim: 1024
+  action_dim: 24
   use_cond_semantic: true
   use_cond_semantic_projection: true
   cond_semantic_dim: 3072
-  use_cls_token: false
-  num_cls_token: 1
-  use_action: false
-  action_dim: null
-  num_cond_semantic: 3
-  num_cond_visuals: 3
+  num_cameras: 1
+  use_cls_token: true
+  num_cls_token: 5
 
-  transformer_d_model: 512
-  transformer_nhead: 8
-  transformer_dim_feedforward: 3200
-  transformer_dropout: 0.1
+  transformer_d_model: 768
+  transformer_nhead: 16
+  transformer_dim_feedforward: 4096
+  transformer_dropout: 0.05
   transformer_activation: gelu
   transformer_batch_first: true
-  transformer_num_layers: 4
+  transformer_num_layers: 5
 
 model:
   graph:
     inputs: [cond_proprio, cond_visual, cond_semantic, action]
     modules:
-      info_embedder:
-        _type_: vfp_single_info_embedder
+      vae_posterior:
+        _type_: vfp_single_posterior
         cond_proprio_dim: ${params.cond_proprio_dim}
         cond_visual_dim: ${params.cond_visual_dim}
         transformer_d_model: ${params.transformer_d_model}
@@ -37,21 +35,19 @@ model:
         transformer_batch_first: ${params.transformer_batch_first}
         transformer_num_layers: ${params.transformer_num_layers}
         action_dim: ${params.action_dim}
-        use_action: ${params.use_action}
         use_cond_semantic: ${params.use_cond_semantic}
         use_cond_semantic_projection: ${params.use_cond_semantic_projection}
         cond_semantic_dim: ${params.cond_semantic_dim}
+        num_cameras: ${params.num_cameras}
         use_cls_token: ${params.use_cls_token}
         num_cls_token: ${params.num_cls_token}
-        num_cond_semantic: ${params.num_cond_semantic}
-        num_cond_visuals: ${params.num_cond_visuals}
     nodes:
-      - name: info_embedder
-        call: module:info_embedder
+      - name: posterior_semantic
+        call: module:vae_posterior
         kwargs:
           cond_proprio: $cond_proprio
           cond_visual: $cond_visual
           cond_semantic: $cond_semantic
           action: $action
-    outputs: [$info_embedder]
+    outputs: [$posterior_semantic]
     return: single
