--- a/experiment_training/imitation_learning/vfp_single_expert/exp2/vfp_single_expert_depth.yaml
+++ b/experiment_training/imitation_learning/vfp_single_expert/exp2/vfp_single_expert_depth.yaml
@@ -1,18 +1,18 @@
 plugins:
-  - "experiment_training.components.dataloader.lerobot_data"
-  - "experiment_training.components.loss.sinkhorn_knopp"
-  - "experiment_training.components.optimizer.adamw_cosine_decay"
-  - "experiment_training.components.trainer.imitation_learning.vfp_single_expert.vfp_single_expert_trainer_depth"
+  - "trainer.experiment_training.components.dataloader.lerobot_data"
+  - "trainer.experiment_training.components.loss.sinkhorn_knopp"
+  - "trainer.experiment_training.components.optimizer.adamw_cosine_decay"
+  - "trainer.experiment_training.components.trainer.imitation_learning.vfp_single_expert.vfp_single_expert_trainer_depth"
 model:
   find_unused_parameters: true
   component_config_paths:
-    head_backbone: "experiment_models/vfp_single_expert/exp2/head_backbone.yaml"
-    left_backbone: "experiment_models/vfp_single_expert/exp2/left_backbone.yaml"
-    right_backbone: "experiment_models/vfp_single_expert/exp2/right_backbone.yaml"
-    info_embedder: "experiment_models/vfp_single_expert/exp2/info_embedder.yaml"
-    da3: "experiment_models/vfp_single_expert/exp2/da3.yaml"
+    head_backbone: "trainer/experiment_models/vfp_single_expert/exp2/head_backbone.yaml"
+    left_backbone: "trainer/experiment_models/vfp_single_expert/exp2/left_backbone.yaml"
+    right_backbone: "trainer/experiment_models/vfp_single_expert/exp2/right_backbone.yaml"
+    info_embedder: "trainer/experiment_models/vfp_single_expert/exp2/info_embedder.yaml"
+    da3: "trainer/experiment_models/vfp_single_expert/exp2/da3.yaml"
     #multimodal_bridge: "experiment_models/vfp_single_expert/exp2/multimodal_bridge.yaml"
-    action_decoder: "experiment_models/vfp_single_expert/exp2/action_decoder.yaml"
+    action_decoder: "trainer/experiment_models/vfp_single_expert/exp2/action_decoder.yaml"
     
   component_build_args:
     head_backbone:
@@ -148,7 +148,7 @@ train:
   epoch: 1000
   load_dir: null
   save_every: 3
-  save_dir: "experiment_training/imitation_learning/vfp_single_expert/exp2"
+  save_dir: "trainer/experiment_training/imitation_learning/vfp_single_expert/exp2"
   trainer: 
     type: 'vfp_single_expert_trainer_depth'
   loss:
